# DiplomProject

./: README.md  requirements.txt
app/: config.py  flow_extractor.py  fuzzy_logic.py  hybrid.py  main.py  ml_detector.py  models.py  storage.py  train_ml_model.py  utils.py
app/detectors/: bad_packet_detector.py  isolation_forest_detector.py  kmeans_detector.py  statistical_detector.py  svm_detector.py
cpp/: CMakeLists.txt  PythonBridge.cpp  PythonBridge.h  main.cpp
data/: attack_traffic.csv  dataset.csv  generate_samples.py  normal_traffic.csv
models/: model.pkl
tests/: test_anomaly_detection.py  test_detectors.py  test_flow_extractor.py  test_scores.py
ui/: streamlit_app.py
